@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
+          - Add exe_file helper to EU::B::Autodetect::C
 
 0.014     2024-07-17 01:30:56+02:00 Europe/Brussels
           - Correctly check os version with -iwithsysroot
